# pool-cli

./: .gitignore  README.md  pyproject.toml
pool/: __init__.py  cache.py  cli.py  models.py
pool/phases/: __init__.py  analyzer.py  classifier.py  discovery.py  embeddings.py  output.py  scanner.py
tests/: conftest.py  test_core.py
